// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Meter background 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  -webkit-transition: stroke 0.3s,stroke-width 0.3s;
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={16}
    preserveAspectRatio="none"
    viewBox="0 0 256 16"
    width={256}
  >
    <path
      d="M 0,8 L 256,8"
      fill="none"
      stroke="#f5f6f8"
      strokeLinecap="square"
      strokeWidth={16}
    />
    <path
      d="M 0,8 L 51.2,8"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#20314f"
      strokeLinecap="butt"
      strokeWidth={16}
    />
  </svg>
  <svg
    className="c1"
    height={16}
    preserveAspectRatio="none"
    viewBox="0 0 256 16"
    width={256}
  >
    <path
      d="M 0,8 L 256,8"
      fill="none"
      stroke="#f5f6f8"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={16}
    />
    <path
      d="M 0,8 L 51.2,8"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#20314f"
      strokeLinecap="butt"
      strokeWidth={16}
    />
  </svg>
  <svg
    className="c1"
    height={256}
    viewBox="0 0 256 256"
    width={256}
  >
    <circle
      cx={128}
      cy={128}
      fill="none"
      r={120}
      stroke="#f5f6f8"
      strokeLinecap="square"
      strokeWidth={16}
    />
    <path
      d="M 242.1267819554 90.9179606750 A 120.0000000000 120.0000000000 0 0 0 128.0000000000 8.0000000000"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#20314f"
      strokeLinecap="butt"
      strokeWidth={16}
    />
  </svg>
  <svg
    className="c1"
    height={256}
    viewBox="0 0 256 256"
    width={256}
  >
    <circle
      cx={128}
      cy={128}
      fill="none"
      r={120}
      stroke="#f5f6f8"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={16}
    />
    <path
      d="M 242.1267819554 90.9179606750 A 120.0000000000 120.0000000000 0 0 0 128.0000000000 8.0000000000"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#20314f"
      strokeLinecap="butt"
      strokeWidth={16}
    />
  </svg>
</div>
`;

exports[`Meter basic 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  -webkit-transition: stroke 0.3s,stroke-width 0.3s;
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={16}
    preserveAspectRatio="none"
    viewBox="0 0 256 16"
    width={256}
  >
    <path
      d="M 0,8 L 256,8"
      fill="none"
      stroke="#f6f6f8"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={16}
    />
    <path
      d="M 0,8 L 51.2,8"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#20314f"
      strokeLinecap="butt"
      strokeWidth={16}
    />
  </svg>
</div>
`;

exports[`Meter default 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  -webkit-transition: stroke 0.3s,stroke-width 0.3s;
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={16}
    preserveAspectRatio="none"
    viewBox="0 0 256 16"
    width={256}
  >
    <path
      d="M 0,8 L 256,8"
      fill="none"
      stroke="#f6f6f8"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={16}
    />
  </svg>
</div>
`;

exports[`Meter many values 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  -webkit-transition: stroke 0.3s,stroke-width 0.3s;
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={16}
    preserveAspectRatio="none"
    viewBox="0 0 256 16"
    width={256}
  >
    <path
      d="M 0,8 L 256,8"
      fill="none"
      stroke="#f6f6f8"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={16}
    />
    <path
      d="M 224,8 L 256,8"
      fill="none"
      stroke="#20314f"
      strokeLinecap="butt"
      strokeWidth={16}
    />
    <path
      d="M 192,8 L 224,8"
      fill="none"
      stroke="#00739D"
      strokeLinecap="butt"
      strokeWidth={16}
    />
    <path
      d="M 160,8 L 192,8"
      fill="none"
      stroke="#99742E"
      strokeLinecap="butt"
      strokeWidth={16}
    />
    <path
      d="M 128,8 L 160,8"
      fill="none"
      stroke="#519bff"
      strokeLinecap="butt"
      strokeWidth={16}
    />
    <path
      d="M 96,8 L 128,8"
      fill="none"
      stroke="#A2423D"
      strokeLinecap="butt"
      strokeWidth={16}
    />
    <path
      d="M 64,8 L 96,8"
      fill="none"
      stroke="#00739D"
      strokeLinecap="butt"
      strokeWidth={16}
    />
    <path
      d="M 32,8 L 64,8"
      fill="none"
      stroke="#99742E"
      strokeLinecap="butt"
      strokeWidth={16}
    />
    <path
      d="M 0,8 L 32,8"
      fill="none"
      stroke="#519bff"
      strokeLinecap="butt"
      strokeWidth={16}
    />
  </svg>
</div>
`;

exports[`Meter round 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  max-width: 100%;
  overflow: hidden;
}

.c2 path {
  -webkit-transition: stroke 0.3s,stroke-width 0.3s;
  transition: stroke 0.3s,stroke-width 0.3s;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
  border-radius: 16px;
}

.c1 path {
  -webkit-transition: stroke 0.3s,stroke-width 0.3s;
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={16}
    preserveAspectRatio="none"
    viewBox="0 0 256 16"
    width={256}
  >
    <path
      d="M 8,8 L 248,8"
      fill="none"
      stroke="#f6f6f8"
      strokeLinecap="round"
      strokeOpacity="0.4"
      strokeWidth={16}
    />
    <path
      d="M 8,8 L 56,8"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#20314f"
      strokeLinecap="round"
      strokeWidth={16}
    />
  </svg>
  <svg
    className="c2"
    height={256}
    viewBox="0 0 256 256"
    width={256}
  >
    <circle
      cx={128}
      cy={128}
      fill="none"
      r={120}
      stroke="#f6f6f8"
      strokeLinecap="round"
      strokeOpacity="0.4"
      strokeWidth={16}
    />
    <path
      d="M 242.1267819554 90.9179606750 A 120.0000000000 120.0000000000 0 0 0 128.0000000000 8.0000000000"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#20314f"
      strokeLinecap="round"
      strokeWidth={16}
    />
    <path
      d="M 242.1267819554 90.9179606750 A 120.0000000000 120.0000000000 0 0 0 241.7988386247 89.9234412314"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#20314f"
      strokeLinecap="round"
      strokeWidth={16}
    />
  </svg>
</div>
`;

exports[`Meter size 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  -webkit-transition: stroke 0.3s,stroke-width 0.3s;
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={16}
    preserveAspectRatio="none"
    viewBox="0 0 64 16"
    width={64}
  >
    <path
      d="M 0,8 L 64,8"
      fill="none"
      stroke="#f6f6f8"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={16}
    />
    <path
      d="M 0,8 L 12.8,8"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#20314f"
      strokeLinecap="butt"
      strokeWidth={16}
    />
  </svg>
  <svg
    className="c1"
    height={16}
    preserveAspectRatio="none"
    viewBox="0 0 128 16"
    width={128}
  >
    <path
      d="M 0,8 L 128,8"
      fill="none"
      stroke="#f6f6f8"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={16}
    />
    <path
      d="M 0,8 L 25.6,8"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#20314f"
      strokeLinecap="butt"
      strokeWidth={16}
    />
  </svg>
  <svg
    className="c1"
    height={16}
    preserveAspectRatio="none"
    viewBox="0 0 256 16"
    width={256}
  >
    <path
      d="M 0,8 L 256,8"
      fill="none"
      stroke="#f6f6f8"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={16}
    />
    <path
      d="M 0,8 L 51.2,8"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#20314f"
      strokeLinecap="butt"
      strokeWidth={16}
    />
  </svg>
  <svg
    className="c1"
    height={16}
    preserveAspectRatio="none"
    viewBox="0 0 512 16"
    width={512}
  >
    <path
      d="M 0,8 L 512,8"
      fill="none"
      stroke="#f6f6f8"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={16}
    />
    <path
      d="M 0,8 L 102.4,8"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#20314f"
      strokeLinecap="butt"
      strokeWidth={16}
    />
  </svg>
  <svg
    className="c1"
    height={16}
    preserveAspectRatio="none"
    viewBox="0 0 768 16"
    width={768}
  >
    <path
      d="M 0,8 L 768,8"
      fill="none"
      stroke="#f6f6f8"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={16}
    />
    <path
      d="M 0,8 L 153.6,8"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#20314f"
      strokeLinecap="butt"
      strokeWidth={16}
    />
  </svg>
  <svg
    className="c1"
    height={16}
    preserveAspectRatio="none"
    viewBox="0 0 24 16"
    width={24}
  >
    <path
      d="M 0,8 L 24,8"
      fill="none"
      stroke="#f6f6f8"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={16}
    />
    <path
      d="M 0,8 L 4.8,8"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#20314f"
      strokeLinecap="butt"
      strokeWidth={16}
    />
  </svg>
  <svg
    className="c1"
    height={64}
    viewBox="0 0 64 64"
    width={64}
  >
    <circle
      cx={32}
      cy={32}
      fill="none"
      r={24}
      stroke="#f6f6f8"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={16}
    />
    <path
      d="M 54.8253563911 24.5835921350 A 24.0000000000 24.0000000000 0 0 0 32.0000000000 8.0000000000"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#20314f"
      strokeLinecap="butt"
      strokeWidth={16}
    />
  </svg>
  <svg
    className="c1"
    height={128}
    viewBox="0 0 128 128"
    width={128}
  >
    <circle
      cx={64}
      cy={64}
      fill="none"
      r={56}
      stroke="#f6f6f8"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={16}
    />
    <path
      d="M 117.2591649125 46.6950483150 A 56.0000000000 56.0000000000 0 0 0 64.0000000000 8.0000000000"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#20314f"
      strokeLinecap="butt"
      strokeWidth={16}
    />
  </svg>
  <svg
    className="c1"
    height={256}
    viewBox="0 0 256 256"
    width={256}
  >
    <circle
      cx={128}
      cy={128}
      fill="none"
      r={120}
      stroke="#f6f6f8"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={16}
    />
    <path
      d="M 242.1267819554 90.9179606750 A 120.0000000000 120.0000000000 0 0 0 128.0000000000 8.0000000000"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#20314f"
      strokeLinecap="butt"
      strokeWidth={16}
    />
  </svg>
  <svg
    className="c1"
    height={512}
    viewBox="0 0 512 512"
    width={512}
  >
    <circle
      cx={256}
      cy={256}
      fill="none"
      r={248}
      stroke="#f6f6f8"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={16}
    />
    <path
      d="M 491.8620160412 179.3637853950 A 248.0000000000 248.0000000000 0 0 0 256.0000000000 8.0000000000"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#20314f"
      strokeLinecap="butt"
      strokeWidth={16}
    />
  </svg>
  <svg
    className="c1"
    height={768}
    viewBox="0 0 768 768"
    width={768}
  >
    <circle
      cx={384}
      cy={384}
      fill="none"
      r={376}
      stroke="#f6f6f8"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={16}
    />
    <path
      d="M 741.5972501270 267.8096101150 A 376.0000000000 376.0000000000 0 0 0 384.0000000000 8.0000000000"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#20314f"
      strokeLinecap="butt"
      strokeWidth={16}
    />
  </svg>
  <svg
    className="c1"
    height={55}
    viewBox="0 0 55 55"
    width={55}
  >
    <circle
      cx={27.5}
      cy={27.5}
      fill="none"
      r={19.5}
      stroke="#f6f6f8"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={16}
    />
    <path
      d="M 46.0456020678 21.4741686097 A 19.5000000000 19.5000000000 0 0 0 27.5000000000 8.0000000000"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#20314f"
      strokeLinecap="butt"
      strokeWidth={16}
    />
  </svg>
</div>
`;

exports[`Meter thickness 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  -webkit-transition: stroke 0.3s,stroke-width 0.3s;
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={4}
    preserveAspectRatio="none"
    viewBox="0 0 256 4"
    width={256}
  >
    <path
      d="M 0,2 L 256,2"
      fill="none"
      stroke="#f6f6f8"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={4}
    />
    <path
      d="M 0,2 L 51.2,2"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#20314f"
      strokeLinecap="butt"
      strokeWidth={4}
    />
  </svg>
  <svg
    className="c1"
    height={8}
    preserveAspectRatio="none"
    viewBox="0 0 256 8"
    width={256}
  >
    <path
      d="M 0,4 L 256,4"
      fill="none"
      stroke="#f6f6f8"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={8}
    />
    <path
      d="M 0,4 L 51.2,4"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#20314f"
      strokeLinecap="butt"
      strokeWidth={8}
    />
  </svg>
  <svg
    className="c1"
    height={16}
    preserveAspectRatio="none"
    viewBox="0 0 256 16"
    width={256}
  >
    <path
      d="M 0,8 L 256,8"
      fill="none"
      stroke="#f6f6f8"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={16}
    />
    <path
      d="M 0,8 L 51.2,8"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#20314f"
      strokeLinecap="butt"
      strokeWidth={16}
    />
  </svg>
  <svg
    className="c1"
    height={32}
    preserveAspectRatio="none"
    viewBox="0 0 256 32"
    width={256}
  >
    <path
      d="M 0,16 L 256,16"
      fill="none"
      stroke="#f6f6f8"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={32}
    />
    <path
      d="M 0,16 L 51.2,16"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#20314f"
      strokeLinecap="butt"
      strokeWidth={32}
    />
  </svg>
  <svg
    className="c1"
    height={64}
    preserveAspectRatio="none"
    viewBox="0 0 256 64"
    width={256}
  >
    <path
      d="M 0,32 L 256,32"
      fill="none"
      stroke="#f6f6f8"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={64}
    />
    <path
      d="M 0,32 L 51.2,32"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#20314f"
      strokeLinecap="butt"
      strokeWidth={64}
    />
  </svg>
  <svg
    className="c1"
    height={55}
    preserveAspectRatio="none"
    viewBox="0 0 256 55"
    width={256}
  >
    <path
      d="M 0,27.5 L 256,27.5"
      fill="none"
      stroke="#f6f6f8"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={55}
    />
    <path
      d="M 0,27.5 L 51.2,27.5"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#20314f"
      strokeLinecap="butt"
      strokeWidth={55}
    />
  </svg>
  <svg
    className="c1"
    height={256}
    viewBox="0 0 256 256"
    width={256}
  >
    <circle
      cx={128}
      cy={128}
      fill="none"
      r={126}
      stroke="#f6f6f8"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={4}
    />
    <path
      d="M 247.8331210532 89.0638587088 A 126.0000000000 126.0000000000 0 0 0 128.0000000000 2.0000000000"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#20314f"
      strokeLinecap="butt"
      strokeWidth={4}
    />
  </svg>
  <svg
    className="c1"
    height={256}
    viewBox="0 0 256 256"
    width={256}
  >
    <circle
      cx={128}
      cy={128}
      fill="none"
      r={124}
      stroke="#f6f6f8"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={8}
    />
    <path
      d="M 245.9310080206 89.6818926975 A 124.0000000000 124.0000000000 0 0 0 128.0000000000 4.0000000000"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#20314f"
      strokeLinecap="butt"
      strokeWidth={8}
    />
  </svg>
  <svg
    className="c1"
    height={256}
    viewBox="0 0 256 256"
    width={256}
  >
    <circle
      cx={128}
      cy={128}
      fill="none"
      r={120}
      stroke="#f6f6f8"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={16}
    />
    <path
      d="M 242.1267819554 90.9179606750 A 120.0000000000 120.0000000000 0 0 0 128.0000000000 8.0000000000"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#20314f"
      strokeLinecap="butt"
      strokeWidth={16}
    />
  </svg>
  <svg
    className="c1"
    height={256}
    viewBox="0 0 256 256"
    width={256}
  >
    <circle
      cx={128}
      cy={128}
      fill="none"
      r={112}
      stroke="#f6f6f8"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={32}
    />
    <path
      d="M 234.5183298251 93.3900966300 A 112.0000000000 112.0000000000 0 0 0 128.0000000000 16.0000000000"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#20314f"
      strokeLinecap="butt"
      strokeWidth={32}
    />
  </svg>
  <svg
    className="c1"
    height={256}
    viewBox="0 0 256 256"
    width={256}
  >
    <circle
      cx={128}
      cy={128}
      fill="none"
      r={96}
      stroke="#f6f6f8"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={64}
    />
    <path
      d="M 219.3014255643 98.3343685400 A 96.0000000000 96.0000000000 0 0 0 128.0000000000 32.0000000000"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#20314f"
      strokeLinecap="butt"
      strokeWidth={64}
    />
  </svg>
  <svg
    className="c1"
    height={256}
    viewBox="0 0 256 256"
    width={256}
  >
    <circle
      cx={128}
      cy={128}
      fill="none"
      r={100.5}
      stroke="#f6f6f8"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={55}
    />
    <path
      d="M 223.5811798877 96.9437920653 A 100.5000000000 100.5000000000 0 0 0 128.0000000000 27.5000000000"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#20314f"
      strokeLinecap="butt"
      strokeWidth={55}
    />
  </svg>
</div>
`;

exports[`Meter type 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  -webkit-transition: stroke 0.3s,stroke-width 0.3s;
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={16}
    preserveAspectRatio="none"
    viewBox="0 0 256 16"
    width={256}
  >
    <path
      d="M 0,8 L 256,8"
      fill="none"
      stroke="#f6f6f8"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={16}
    />
    <path
      d="M 0,8 L 51.2,8"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#20314f"
      strokeLinecap="butt"
      strokeWidth={16}
    />
  </svg>
  <svg
    className="c1"
    height={256}
    viewBox="0 0 256 256"
    width={256}
  >
    <circle
      cx={128}
      cy={128}
      fill="none"
      r={120}
      stroke="#f6f6f8"
      strokeLinecap="square"
      strokeOpacity="0.4"
      strokeWidth={16}
    />
    <path
      d="M 242.1267819554 90.9179606750 A 120.0000000000 120.0000000000 0 0 0 128.0000000000 8.0000000000"
      fill="none"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      stroke="#20314f"
      strokeLinecap="butt"
      strokeWidth={16}
    />
  </svg>
</div>
`;
